test/trivial/dinan/bad_index.good
bad_index.chpl:1: error: only identifiers or tuples are allowed as index expressions
